--- a/style.css
+++ b/style.css
@@ -3,3 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.d-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    padding: 7px;
+
+}
+
+h1 {
+    margin: 10px;
+}
