--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@
 
 button {
     padding: 7px;
-
+    border-radius: 10px;
+    border: 0px;
+    background-color: black;
+    color: white;
 }
 
 h1 {
@@ -21,9 +24,10 @@ h1 {
 
 .rotateY {
     transform: rotateY(180deg);
-    
+
 }
 
 .bg-contrast {
-    background-color: rgb(240, 236, 167);
+    background: linear-gradient(180deg, rgba(253,249,115,1) 50%, rgba(109,110,73,1) 100%);
+    height: 98.5vh;
 }
